			  PyEphem CHANGELOG

Next version

  - The Observer now has an radec_of(az=, alt=) function that returns
    the right ascension and declination of the given location in the
    sky.

  - You can normalize an Angle into the range [0, 2pi) by requesting
    the attribute ".norm".

Version 3.6.4a

  - Upgraded to the libastro from XEphem 3.6.4, which:

     No longer incorrectly applies relativistic deflection to
     objects on this side of the Sun, whose light will obviously not
     go past the sun and be deflected.

     Now correctly handles earth satellites with a negative es_decay
     parameter.

  - Added several functions to the module:

     moon_phases() - computes a new and full moon following a date.
     delta_t() - computes the difference between Terrestrial Time and
       Universal Time.
     julian_date() - computes the Julian Date for a date or Observer.

     millennium_atlas()
     uranometria()
     uranometria2000() - determine the star atlas page on which a
       given location falls, given as right ascension and declination.

  - Added a function to the Observer class, which takes no arguments:

     sidereal_time() - computes the sidereal time for the Observer

  - Each Observer now has a "horizon" attribute with, which you can
    specify the degrees altitude at which you define an object to be
    rising or setting.  Normally, all rising and setting times are
    computed for when the object appears to be exactly at the horizon
    (at zero degrees altitude).

Version 3.6.1a

  - All major moons in the solar system are now supported.

  - Added copy() method to bodies, that returns a new instance of the
    body which should be identical in all properties.

  - Improved the definitions of body attributes, both in their
    docstrings and in the PyEphem Manual.

  - Improved access to the orbital parameters by which the user
    defines bodies in ellipical, parabolic, and hyperbolic orbits, as